force-app/main/default/objects/SiebelRdo__x/SiebelRdo__x.object-meta.xml
<CustomObject>
    <description>SiebelRdo</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelRdo</externalName>
    <label>RDO Siebel</label>
    <pluralLabel>RDO Siebel</pluralLabel>
</CustomObject>