force-app/main/default/objects/SiebelRdo__x/fields/ADDR__c.field-meta.xml
<CustomField>
    <fullName>ADDR__c</fullName>
    <label>Indirizzo Fornitura</label>
    <length>200</length>
    <type>Text</type>
</CustomField>