force-app/main/default/objects/SiebelRdo__x/fields/ATTRIB_01__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_01__c</fullName>
    <description>ATTRIB_01</description>
    <externalDeveloperName>ATTRIB_01</externalDeveloperName>
    <label>Fattibilita tecnica</label>
    <length>100</length>
    <type>Text</type>
</CustomField>