force-app/main/default/objects/SiebelRdo__x/fields/ATTRIB_02__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_02__c</fullName>
    <description>ATTRIB_02</description>
    <externalDeveloperName>ATTRIB_02</externalDeveloperName>
    <label>Fattibilita economica</label>
    <length>100</length>
    <type>Text</type>
</CustomField>