force-app/main/default/objects/SiebelRdo__x/fields/BILLABLE_FLG__c.field-meta.xml
<CustomField>
    <fullName>BILLABLE_FLG__c</fullName>
    <description>BILLABLE_FLG</description>
    <externalDeveloperName>BILLABLE_FLG</externalDeveloperName>
    <label>Fatturabile</label>
    <length>1</length>
    <type>Text</type>
</CustomField>