force-app/main/default/objects/SiebelRdo__x/fields/COMPLETED_DT__c.field-meta.xml
<CustomField>
    <fullName>COMPLETED_DT__c</fullName>
    <description>COMPLETED_DT</description>
    <externalDeveloperName>COMPLETED_DT</externalDeveloperName>
    <label>Complet.eff</label>
    <type>DateTime</type>
</CustomField>