force-app/main/default/objects/SiebelRdo__x/fields/CONTACT_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_ID__c</fullName>
    <description>CONTACT_ID</description>
    <externalDeveloperName>CONTACT_ID</externalDeveloperName>
    <label>ID Contatto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>