force-app/main/default/objects/SiebelRdo__x/fields/CREATED_BY__c.field-meta.xml
<CustomField>
    <fullName>CREATED_BY__c</fullName>
    <description>CREATED_BY</description>
    <externalDeveloperName>CREATED_BY</externalDeveloperName>
    <label>Creato da</label>
    <length>30</length>
    <type>Text</type>
</CustomField>