force-app/main/default/objects/SiebelRdo__x/fields/CVP_APPLICATIONID__c.field-meta.xml
<CustomField>
    <fullName>CVP_APPLICATIONID__c</fullName>
    <description>CVP_APPLICATIONID</description>
    <externalDeveloperName>CVP_APPLICATIONID</externalDeveloperName>
    <label>CVP Application Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>