force-app/main/default/objects/SiebelRdo__x/fields/DISPLAY_NAME__c.field-meta.xml
<CustomField>
    <fullName>DISPLAY_NAME__c</fullName>
    <description>DISPLAY_NAME</description>
    <externalDeveloperName>DISPLAY_NAME</externalDeveloperName>
    <label>Nome dell&apos;attributo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>