force-app/main/default/objects/SiebelRdo__x/fields/INTEGRATION_ID__c.field-meta.xml
<CustomField>
    <fullName>INTEGRATION_ID__c</fullName>
    <description>INTEGRATION_ID</description>
    <externalDeveloperName>INTEGRATION_ID</externalDeveloperName>
    <label>ID Integrazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>