force-app/main/default/objects/SiebelRdo__x/fields/ITEM_X_X_RAG_SOC_GEST_CAL__c.field-meta.xml
<CustomField>
    <fullName>ITEM_X_X_RAG_SOC_GEST_CAL__c</fullName>
    <description>ITEM_X_X_RAG_SOC_GEST_CAL</description>
    <externalDeveloperName>ITEM_X_X_RAG_SOC_GEST_CAL</externalDeveloperName>
    <label>Ragione Sociale Gestore Calore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>