force-app/main/default/objects/SiebelRdo__x/fields/OPER_STATUS_CD__c.field-meta.xml
<CustomField>
    <fullName>OPER_STATUS_CD__c</fullName>
    <label>Oper Status CD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>