force-app/main/default/objects/SiebelRdo__x/fields/ORDER_ID__c.field-meta.xml
<CustomField>
    <fullName>ORDER_ID__c</fullName>
    <description>ORDER_ID</description>
    <externalDeveloperName>ORDER_ID</externalDeveloperName>
    <label>Order Id</label>
    <length>15</length>
    <referenceTo>SiebelOrder__x</referenceTo>
    <relationshipLabel>Riga d&apos;ordine</relationshipLabel>
    <relationshipName>SiebelRdo</relationshipName>
    <type>ExternalLookup</type>
</CustomField>