force-app/main/default/objects/SiebelRdo__x/fields/OU_NUM__c.field-meta.xml
<CustomField>
    <fullName>OU_NUM__c</fullName>
    <label>BP Sottoscrizione Tari</label>
    <length>30</length>
    <type>Text</type>
</CustomField>