force-app/main/default/objects/SiebelRdo__x/fields/OWNER_ACCOUNT_ID__c.field-meta.xml
<CustomField>
    <fullName>OWNER_ACCOUNT_ID__c</fullName>
    <description>OWNER_ACCOUNT_ID</description>
    <externalDeveloperName>OWNER_ACCOUNT_ID</externalDeveloperName>
    <label>OWNER_ACCOUNT_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>