force-app/main/default/objects/SiebelRdo__x/fields/PAR_ORDER_ITEM_ID__c.field-meta.xml
<CustomField>
    <fullName>PAR_ORDER_ITEM_ID__c</fullName>
    <description>PAR_ORDER_ITEM_ID</description>
    <externalDeveloperName>PAR_ORDER_ITEM_ID</externalDeveloperName>
    <label>Parent Order Item</label>
    <length>15</length>
    <type>Text</type>
</CustomField>