force-app/main/default/objects/SiebelRdo__x/fields/PROD_STATUS_CD__c.field-meta.xml
<CustomField>
    <fullName>PROD_STATUS_CD__c</fullName>
    <description>PROD_STATUS_CD</description>
    <externalDeveloperName>PROD_STATUS_CD</externalDeveloperName>
    <label>Stato del prodotto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>