force-app/main/default/objects/SiebelRdo__x/fields/REQ_SHIP_DT__c.field-meta.xml
<CustomField>
    <fullName>REQ_SHIP_DT__c</fullName>
    <description>REQ_SHIP_DT</description>
    <externalDeveloperName>REQ_SHIP_DT</externalDeveloperName>
    <label>Scadenza</label>
    <type>DateTime</type>
</CustomField>