force-app/main/default/objects/SiebelRdo__x/fields/ROOT_ORDER_ITEM_ID__c.field-meta.xml
<CustomField>
    <fullName>ROOT_ORDER_ITEM_ID__c</fullName>
    <description>ROOT_ORDER_ITEM_ID</description>
    <externalDeveloperName>ROOT_ORDER_ITEM_ID</externalDeveloperName>
    <label>Root Order Item</label>
    <length>15</length>
    <type>Text</type>
</CustomField>