force-app/main/default/objects/SiebelRdo__x/fields/RTRN_ADDR_ID__c.field-meta.xml
<CustomField>
    <fullName>RTRN_ADDR_ID__c</fullName>
    <description>RTRN_ADDR_ID</description>
    <externalDeveloperName>RTRN_ADDR_ID</externalDeveloperName>
    <label>Id indirizzo di fornitura</label>
    <length>15</length>
    <type>Text</type>
</CustomField>