force-app/main/default/objects/SiebelRdo__x/fields/RTRN_CON_ID__c.field-meta.xml
<CustomField>
    <fullName>RTRN_CON_ID__c</fullName>
    <description>RTRN_CON_ID</description>
    <externalDeveloperName>RTRN_CON_ID</externalDeveloperName>
    <label>RTRN_CON_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>