force-app/main/default/objects/SiebelRdo__x/fields/SERIAL_NUM__c.field-meta.xml
<CustomField>
    <fullName>SERIAL_NUM__c</fullName>
    <label>Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>