force-app/main/default/objects/SiebelRdo__x/fields/SHIP_OU_ID__c.field-meta.xml
<CustomField>
    <fullName>SHIP_OU_ID__c</fullName>
    <description>SHIP_OU_ID</description>
    <externalDeveloperName>SHIP_OU_ID</externalDeveloperName>
    <label>Id Indirizzo di spedizione</label>
    <length>15</length>
    <type>Text</type>
</CustomField>