force-app/main/default/objects/SiebelRdo__x/fields/SP_NUM__c.field-meta.xml
<CustomField>
    <fullName>SP_NUM__c</fullName>
    <description>SP_NUM</description>
    <externalDeveloperName>SP_NUM</externalDeveloperName>
    <label>Numero Service Point</label>
    <length>250</length>
    <type>Text</type>
</CustomField>