force-app/main/default/objects/SiebelRdo__x/fields/START_DT__c.field-meta.xml
<CustomField>
    <fullName>START_DT__c</fullName>
    <label>Data Inizio Contratto</label>
    <type>Date</type>
</CustomField>