force-app/main/default/objects/SiebelRdo__x/fields/STATUS_CD__c.field-meta.xml
<CustomField>
    <fullName>STATUS_CD__c</fullName>
    <description>STATUS_CD</description>
    <externalDeveloperName>STATUS_CD</externalDeveloperName>
    <label>Status CD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>