force-app/main/default/objects/SiebelRdo__x/fields/X_ACC_229__c.field-meta.xml
<CustomField>
    <fullName>X_ACC_229__c</fullName>
    <description>X_ACC_229</description>
    <externalDeveloperName>X_ACC_229</externalDeveloperName>
    <label>Acc 229</label>
    <length>50</length>
    <type>Text</type>
</CustomField>