force-app/main/default/objects/SiebelRdo__x/fields/X_ACCESSO_FUI_NEW__c.field-meta.xml
<CustomField>
    <fullName>X_ACCESSO_FUI_NEW__c</fullName>
    <description>X_ACCESSO_FUI_NEW</description>
    <externalDeveloperName>X_ACCESSO_FUI_NEW</externalDeveloperName>
    <label>Accesso FUI NEW</label>
    <length>2</length>
    <type>Text</type>
</CustomField>