force-app/main/default/objects/SiebelRdo__x/fields/X_ACCISE__c.field-meta.xml
<CustomField>
    <fullName>X_ACCISE__c</fullName>
    <description>X_ACCISE</description>
    <externalDeveloperName>X_ACCISE</externalDeveloperName>
    <label>Accise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>