force-app/main/default/objects/SiebelRdo__x/fields/X_ACR__c.field-meta.xml
<CustomField>
    <fullName>X_ACR__c</fullName>
    <label>ACR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>