force-app/main/default/objects/SiebelRdo__x/fields/X_ADEG_PCS__c.field-meta.xml
<CustomField>
    <fullName>X_ADEG_PCS__c</fullName>
    <description>X_ADEG_PCS</description>
    <externalDeveloperName>X_ADEG_PCS</externalDeveloperName>
    <label>Adeguamento pcs</label>
    <length>30</length>
    <type>Text</type>
</CustomField>