force-app/main/default/objects/SiebelRdo__x/fields/X_AGEV_ALTRO__c.field-meta.xml
<CustomField>
    <fullName>X_AGEV_ALTRO__c</fullName>
    <description>X_AGEV_ALTRO</description>
    <externalDeveloperName>X_AGEV_ALTRO</externalDeveloperName>
    <label>Agevolazioni Altro</label>
    <length>2</length>
    <type>Text</type>
</CustomField>