force-app/main/default/objects/SiebelRdo__x/fields/X_AGEV_IVA__c.field-meta.xml
<CustomField>
    <fullName>X_AGEV_IVA__c</fullName>
    <description>X_AGEV_IVA</description>
    <externalDeveloperName>X_AGEV_IVA</externalDeveloperName>
    <label>Agevolazioni IVA</label>
    <length>2</length>
    <type>Text</type>
</CustomField>