force-app/main/default/objects/SiebelRdo__x/fields/X_AGEVOLAZIONI__c.field-meta.xml
<CustomField>
    <fullName>X_AGEVOLAZIONI__c</fullName>
    <description>X_AGEVOLAZIONI</description>
    <externalDeveloperName>X_AGEVOLAZIONI</externalDeveloperName>
    <label>Agevolazioni</label>
    <length>2</length>
    <type>Text</type>
</CustomField>