force-app/main/default/objects/SiebelRdo__x/fields/X_ALLACCIO_TEMP__c.field-meta.xml
<CustomField>
    <fullName>X_ALLACCIO_TEMP__c</fullName>
    <description>X_ALLACCIO_TEMP</description>
    <externalDeveloperName>X_ALLACCIO_TEMP</externalDeveloperName>
    <label>Allaccio Temporaneo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>