force-app/main/default/objects/SiebelRdo__x/fields/X_ALTRE_IMP__c.field-meta.xml
<CustomField>
    <fullName>X_ALTRE_IMP__c</fullName>
    <description>X_ALTRE_IMP</description>
    <externalDeveloperName>X_ALTRE_IMP</externalDeveloperName>
    <label>Altre Imposte</label>
    <length>50</length>
    <type>Text</type>
</CustomField>