force-app/main/default/objects/SiebelRdo__x/fields/X_ALTRI_DAT_GEST_CAL__c.field-meta.xml
<CustomField>
    <fullName>X_ALTRI_DAT_GEST_CAL__c</fullName>
    <description>X_ALTRI_DAT_GEST_CAL</description>
    <externalDeveloperName>X_ALTRI_DAT_GEST_CAL</externalDeveloperName>
    <label>Altri Dati Gestore Calore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>