force-app/main/default/objects/SiebelRdo__x/fields/X_ANALISI_CONSUMI__c.field-meta.xml
<CustomField>
    <fullName>X_ANALISI_CONSUMI__c</fullName>
    <description>X_ANALISI_CONSUMI</description>
    <externalDeveloperName>X_ANALISI_CONSUMI</externalDeveloperName>
    <label>Analisi Consumi</label>
    <length>1</length>
    <type>Text</type>
</CustomField>