force-app/main/default/objects/SiebelRdo__x/fields/X_ANNO_FABB_MIS__c.field-meta.xml
<CustomField>
    <fullName>X_ANNO_FABB_MIS__c</fullName>
    <description>X_ANNO_FABB_MIS</description>
    <externalDeveloperName>X_ANNO_FABB_MIS</externalDeveloperName>
    <label>Anno Fabb Misuratore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>