force-app/main/default/objects/SiebelRdo__x/fields/X_ASSENZA_DATI_CATASTO_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_ASSENZA_DATI_CATASTO_TARI__c</fullName>
    <description>X_ASSENZA_DATI_CATASTO_TARI</description>
    <externalDeveloperName>X_ASSENZA_DATI_CATASTO_TARI</externalDeveloperName>
    <label>TARI Assenza Dati Catastali</label>
    <length>30</length>
    <type>Text</type>
</CustomField>