force-app/main/default/objects/SiebelRdo__x/fields/X_ASSET_ID_1__c.field-meta.xml
<CustomField>
    <fullName>X_ASSET_ID_1__c</fullName>
    <description>X_ASSET_ID_1</description>
    <externalDeveloperName>X_ASSET_ID_1</externalDeveloperName>
    <label>Asset ID 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>