force-app/main/default/objects/SiebelRdo__x/fields/X_ATT_CON_MODIF__c.field-meta.xml
<CustomField>
    <fullName>X_ATT_CON_MODIF__c</fullName>
    <description>X_ATT_CON_MODIF</description>
    <externalDeveloperName>X_ATT_CON_MODIF</externalDeveloperName>
    <label>Attivazione con Modifica</label>
    <length>2</length>
    <type>Text</type>
</CustomField>