force-app/main/default/objects/SiebelRdo__x/fields/X_ATTIVITA_IMPRESA_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_ATTIVITA_IMPRESA_TARI__c</fullName>
    <description>X_ATTIVITA_IMPRESA_TARI</description>
    <externalDeveloperName>X_ATTIVITA_IMPRESA_TARI</externalDeveloperName>
    <label>TARI Attivita Impresa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>