force-app/main/default/objects/SiebelRdo__x/fields/X_ATTIVITA_SVOLTA__c.field-meta.xml
<CustomField>
    <fullName>X_ATTIVITA_SVOLTA__c</fullName>
    <description>X_ATTIVITA_SVOLTA</description>
    <externalDeveloperName>X_ATTIVITA_SVOLTA</externalDeveloperName>
    <label>Attività svolta</label>
    <length>30</length>
    <type>Text</type>
</CustomField>