force-app/main/default/objects/SiebelRdo__x/fields/X_ATTRIB_02__c.field-meta.xml
<CustomField>
    <fullName>X_ATTRIB_02__c</fullName>
    <description>X_ATTRIB_02</description>
    <externalDeveloperName>X_ATTRIB_02</externalDeveloperName>
    <label>Distributore No Pick</label>
    <length>30</length>
    <type>Text</type>
</CustomField>