force-app/main/default/objects/SiebelRdo__x/fields/X_ATTRIB_03__c.field-meta.xml
<CustomField>
    <fullName>X_ATTRIB_03__c</fullName>
    <description>X_ATTRIB_03</description>
    <externalDeveloperName>X_ATTRIB_03</externalDeveloperName>
    <label>Opzione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>