force-app/main/default/objects/SiebelRdo__x/fields/X_ATTRIB_04__c.field-meta.xml
<CustomField>
    <fullName>X_ATTRIB_04__c</fullName>
    <description>X_ATTRIB_04</description>
    <externalDeveloperName>X_ATTRIB_04</externalDeveloperName>
    <label>Societa Uscente SME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>