force-app/main/default/objects/SiebelRdo__x/fields/X_AUTOCERT_ISTANZA__c.field-meta.xml
<CustomField>
    <fullName>X_AUTOCERT_ISTANZA__c</fullName>
    <description>X_AUTOCERT_ISTANZA</description>
    <externalDeveloperName>X_AUTOCERT_ISTANZA</externalDeveloperName>
    <label>Autocert Nuovi Proc SDD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>