force-app/main/default/objects/SiebelRdo__x/fields/X_BILL_ADDR__c.field-meta.xml
<CustomField>
    <fullName>X_BILL_ADDR__c</fullName>
    <description>X_BILL_ADDR</description>
    <externalDeveloperName>X_BILL_ADDR</externalDeveloperName>
    <label>Indirizzo Fatturazione</label>
    <length>250</length>
    <type>Text</type>
</CustomField>