force-app/main/default/objects/SiebelRdo__x/fields/X_BONUS__c.field-meta.xml
<CustomField>
    <fullName>X_BONUS__c</fullName>
    <description>X_BONUS</description>
    <externalDeveloperName>X_BONUS</externalDeveloperName>
    <label>Bonus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>