force-app/main/default/objects/SiebelRdo__x/fields/X_BRAND_SOC_COD__c.field-meta.xml
<CustomField>
    <fullName>X_BRAND_SOC_COD__c</fullName>
    <description>X_BRAND_SOC_COD</description>
    <externalDeveloperName>X_BRAND_SOC_COD</externalDeveloperName>
    <label>Codice Brand Societario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>