force-app/main/default/objects/SiebelRdo__x/fields/X_CANALE_USER__c.field-meta.xml
<CustomField>
    <fullName>X_CANALE_USER__c</fullName>
    <description>X_CANALE_USER</description>
    <externalDeveloperName>X_CANALE_USER</externalDeveloperName>
    <label>Canale Utente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>