force-app/main/default/objects/SiebelRdo__x/fields/X_CAP_GEST_CAL__c.field-meta.xml
<CustomField>
    <fullName>X_CAP_GEST_CAL__c</fullName>
    <description>X_CAP_GEST_CAL</description>
    <externalDeveloperName>X_CAP_GEST_CAL</externalDeveloperName>
    <label>CAP Gest Calore</label>
    <length>30</length>
    <type>Text</type>
</CustomField>