force-app/main/default/objects/SiebelRdo__x/fields/X_CAT_DISALIMENT__c.field-meta.xml
<CustomField>
    <fullName>X_CAT_DISALIMENT__c</fullName>
    <description>X_CAT_DISALIMENT</description>
    <externalDeveloperName>X_CAT_DISALIMENT</externalDeveloperName>
    <label>Categoria disalimentabilità</label>
    <length>30</length>
    <type>Text</type>
</CustomField>