force-app/main/default/objects/SiebelRdo__x/fields/X_CAUSA_BLOCCO__c.field-meta.xml
<CustomField>
    <fullName>X_CAUSA_BLOCCO__c</fullName>
    <label>Causa Blocco Contratto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>