force-app/main/default/objects/SiebelRdo__x/fields/X_CAUSA_BLOCCO_DESC__c.field-meta.xml
<CustomField>
    <fullName>X_CAUSA_BLOCCO_DESC__c</fullName>
    <label>Causa Blocco Desc Contratto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>