force-app/main/default/objects/SiebelRdo__x/fields/X_CCR__c.field-meta.xml
<CustomField>
    <fullName>X_CCR__c</fullName>
    <description>X_CCR</description>
    <externalDeveloperName>X_CCR</externalDeveloperName>
    <label>CCR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>