force-app/main/default/objects/SiebelRdo__x/fields/X_CF_BENEF__c.field-meta.xml
<CustomField>
    <fullName>X_CF_BENEF__c</fullName>
    <description>X_CF_BENEF</description>
    <externalDeveloperName>X_CF_BENEF</externalDeveloperName>
    <label>CF Beneficiario</label>
    <length>16</length>
    <type>Text</type>
</CustomField>