force-app/main/default/objects/SiebelRdo__x/fields/X_CF_DA_COM__c.field-meta.xml
<CustomField>
    <fullName>X_CF_DA_COM__c</fullName>
    <description>X_CF_DA_COM</description>
    <externalDeveloperName>X_CF_DA_COM</externalDeveloperName>
    <label>CF PIva da Comunicare</label>
    <length>30</length>
    <type>Text</type>
</CustomField>