force-app/main/default/objects/SiebelRdo__x/fields/X_CG__c.field-meta.xml
<CustomField>
    <fullName>X_CG__c</fullName>
    <description>X_CG</description>
    <externalDeveloperName>X_CG</externalDeveloperName>
    <label>Cg (mc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>