force-app/main/default/objects/SiebelRdo__x/fields/X_CIFRE_ATTIVA__c.field-meta.xml
<CustomField>
    <fullName>X_CIFRE_ATTIVA__c</fullName>
    <description>X_CIFRE_ATTIVA</description>
    <externalDeveloperName>X_CIFRE_ATTIVA</externalDeveloperName>
    <label>Cifre Attiva</label>
    <length>50</length>
    <type>Text</type>
</CustomField>