force-app/main/default/objects/SiebelRdo__x/fields/X_CIFRE_REATTIVA__c.field-meta.xml
<CustomField>
    <fullName>X_CIFRE_REATTIVA__c</fullName>
    <description>X_CIFRE_REATTIVA</description>
    <externalDeveloperName>X_CIFRE_REATTIVA</externalDeveloperName>
    <label>Cifre Reattiva</label>
    <length>50</length>
    <type>Text</type>
</CustomField>