force-app/main/default/objects/SiebelRdo__x/fields/X_CIG__c.field-meta.xml
<CustomField>
    <fullName>X_CIG__c</fullName>
    <description>X_CIG</description>
    <externalDeveloperName>X_CIG</externalDeveloperName>
    <label>CIG</label>
    <length>50</length>
    <type>Text</type>
</CustomField>