force-app/main/default/objects/SiebelRdo__x/fields/X_CIV_GEST_CAL__c.field-meta.xml
<CustomField>
    <fullName>X_CIV_GEST_CAL__c</fullName>
    <description>X_CIV_GEST_CAL</description>
    <externalDeveloperName>X_CIV_GEST_CAL</externalDeveloperName>
    <label>Civico Gest Calore</label>
    <length>15</length>
    <type>Text</type>
</CustomField>