force-app/main/default/objects/SiebelRdo__x/fields/X_CLASSE_CONTO__c.field-meta.xml
<CustomField>
    <fullName>X_CLASSE_CONTO__c</fullName>
    <description>X_CLASSE_CONTO</description>
    <externalDeveloperName>X_CLASSE_CONTO</externalDeveloperName>
    <label>Classe Conto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>