force-app/main/default/objects/SiebelRdo__x/fields/X_CLASSE_PROF_PRELIEVO__c.field-meta.xml
<CustomField>
    <fullName>X_CLASSE_PROF_PRELIEVO__c</fullName>
    <description>X_CLASSE_PROF_PRELIEVO</description>
    <externalDeveloperName>X_CLASSE_PROF_PRELIEVO</externalDeveloperName>
    <label>Classe Profilo Prelievo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>