force-app/main/default/objects/SiebelRdo__x/fields/X_COD_CONTRATTO__c.field-meta.xml
<CustomField>
    <fullName>X_COD_CONTRATTO__c</fullName>
    <description>X_COD_CONTRATTO</description>
    <externalDeveloperName>X_COD_CONTRATTO</externalDeveloperName>
    <label>Cod Contratto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>