force-app/main/default/objects/SiebelRdo__x/fields/X_COD_FISC_TCP_1__c.field-meta.xml
<CustomField>
    <fullName>X_COD_FISC_TCP_1__c</fullName>
    <description>X_COD_FISC_TCP_1</description>
    <externalDeveloperName>X_COD_FISC_TCP_1</externalDeveloperName>
    <label>Cod Fisc Benef TCP 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>