force-app/main/default/objects/SiebelRdo__x/fields/X_COD_FISC_TCP_2__c.field-meta.xml
<CustomField>
    <fullName>X_COD_FISC_TCP_2__c</fullName>
    <description>X_COD_FISC_TCP_2</description>
    <externalDeveloperName>X_COD_FISC_TCP_2</externalDeveloperName>
    <label>Cod Fisc Benef TCP 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>