force-app/main/default/objects/SiebelRdo__x/fields/X_COD_FISC_TCP_3__c.field-meta.xml
<CustomField>
    <fullName>X_COD_FISC_TCP_3__c</fullName>
    <description>X_COD_FISC_TCP_3</description>
    <externalDeveloperName>X_COD_FISC_TCP_3</externalDeveloperName>
    <label>Cod Fisc Benef TCP 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>