force-app/main/default/objects/SiebelRdo__x/fields/X_COD_OFF_RESELLER__c.field-meta.xml
<CustomField>
    <fullName>X_COD_OFF_RESELLER__c</fullName>
    <description>X_COD_OFF_RESELLER</description>
    <externalDeveloperName>X_COD_OFF_RESELLER</externalDeveloperName>
    <label>Codice Offerta Reseller</label>
    <length>35</length>
    <type>Text</type>
</CustomField>