force-app/main/default/objects/SiebelRdo__x/fields/X_COD_PREV_DISTRIB__c.field-meta.xml
<CustomField>
    <fullName>X_COD_PREV_DISTRIB__c</fullName>
    <description>X_COD_PREV_DISTRIB</description>
    <externalDeveloperName>X_COD_PREV_DISTRIB</externalDeveloperName>
    <label>Codice Preventivo Distributore</label>
    <length>15</length>
    <type>Text</type>
</CustomField>