force-app/main/default/objects/SiebelRdo__x/fields/X_COGNOME_PREC_INTEST__c.field-meta.xml
<CustomField>
    <fullName>X_COGNOME_PREC_INTEST__c</fullName>
    <description>X_COGNOME_PREC_INTEST</description>
    <externalDeveloperName>X_COGNOME_PREC_INTEST</externalDeveloperName>
    <label>Cognome Prec Intestatario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>