force-app/main/default/objects/SiebelRdo__x/fields/X_COMUNE_GEST_CAL__c.field-meta.xml
<CustomField>
    <fullName>X_COMUNE_GEST_CAL__c</fullName>
    <description>X_COMUNE_GEST_CAL</description>
    <externalDeveloperName>X_COMUNE_GEST_CAL</externalDeveloperName>
    <label>Comune Gest Calore</label>
    <length>30</length>
    <type>Text</type>
</CustomField>