force-app/main/default/objects/SiebelRdo__x/fields/X_CONFERMA_APP__c.field-meta.xml
<CustomField>
    <fullName>X_CONFERMA_APP__c</fullName>
    <description>X_CONFERMA_APP</description>
    <externalDeveloperName>X_CONFERMA_APP</externalDeveloperName>
    <label>Conferma App</label>
    <length>1</length>
    <type>Text</type>
</CustomField>