force-app/main/default/objects/SiebelRdo__x/fields/X_CONSIP_FLG__c.field-meta.xml
<CustomField>
    <fullName>X_CONSIP_FLG__c</fullName>
    <description>X_CONSIP_FLG</description>
    <externalDeveloperName>X_CONSIP_FLG</externalDeveloperName>
    <label>Consip Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>