force-app/main/default/objects/SiebelRdo__x/fields/X_CONSORZIO__c.field-meta.xml
<CustomField>
    <fullName>X_CONSORZIO__c</fullName>
    <description>X_CONSORZIO</description>
    <externalDeveloperName>X_CONSORZIO</externalDeveloperName>
    <label>Consorzio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>