force-app/main/default/objects/SiebelRdo__x/fields/X_CONTR_COD_NEW__c.field-meta.xml
<CustomField>
    <fullName>X_CONTR_COD_NEW__c</fullName>
    <description>X_CONTR_COD_NEW</description>
    <externalDeveloperName>X_CONTR_COD_NEW</externalDeveloperName>
    <label>Contract Code New</label>
    <length>15</length>
    <type>Text</type>
</CustomField>