force-app/main/default/objects/SiebelRdo__x/fields/X_CONTRACT_CD__c.field-meta.xml
<CustomField>
    <fullName>X_CONTRACT_CD__c</fullName>
    <description>X_CONTRACT_CD</description>
    <externalDeveloperName>X_CONTRACT_CD</externalDeveloperName>
    <label>Contratto CD</label>
    <length>15</length>
    <type>Text</type>
</CustomField>