force-app/main/default/objects/SiebelRdo__x/fields/X_CONTRACT_CD_STATUS__c.field-meta.xml
<CustomField>
    <fullName>X_CONTRACT_CD_STATUS__c</fullName>
    <description>X_CONTRACT_CD_STATUS</description>
    <externalDeveloperName>X_CONTRACT_CD_STATUS</externalDeveloperName>
    <label>Stato CD Contratto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>