force-app/main/default/objects/SiebelRdo__x/fields/X_CORRISPETT_HCNO__c.field-meta.xml
<CustomField>
    <fullName>X_CORRISPETT_HCNO__c</fullName>
    <description>X_CORRISPETT_HCNO</description>
    <externalDeveloperName>X_CORRISPETT_HCNO</externalDeveloperName>
    <label>CorrispettivoHCNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>