force-app/main/default/objects/SiebelRdo__x/fields/X_COSTO_IN_LAB__c.field-meta.xml
<CustomField>
    <fullName>X_COSTO_IN_LAB__c</fullName>
    <description>X_COSTO_IN_LAB</description>
    <externalDeveloperName>X_COSTO_IN_LAB</externalDeveloperName>
    <label>Costo in Laboratorio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>