force-app/main/default/objects/SiebelRdo__x/fields/X_COSTO_IN_LAB_DL__c.field-meta.xml
<CustomField>
    <fullName>X_COSTO_IN_LAB_DL__c</fullName>
    <description>X_COSTO_IN_LAB_DL</description>
    <externalDeveloperName>X_COSTO_IN_LAB_DL</externalDeveloperName>
    <label>Costo in Laboratorio da DL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>