force-app/main/default/objects/SiebelRdo__x/fields/X_COSTO_IN_LOCO__c.field-meta.xml
<CustomField>
    <fullName>X_COSTO_IN_LOCO__c</fullName>
    <description>X_COSTO_IN_LOCO</description>
    <externalDeveloperName>X_COSTO_IN_LOCO</externalDeveloperName>
    <label>Costo in Loco</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>