force-app/main/default/objects/SiebelRdo__x/fields/X_COSTO_SERVIZIO__c.field-meta.xml
<CustomField>
    <fullName>X_COSTO_SERVIZIO__c</fullName>
    <description>X_COSTO_SERVIZIO</description>
    <externalDeveloperName>X_COSTO_SERVIZIO</externalDeveloperName>
    <label>Costo ServizioPSV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>