force-app/main/default/objects/SiebelRdo__x/fields/X_CP_GESTORE__c.field-meta.xml
<CustomField>
    <fullName>X_CP_GESTORE__c</fullName>
    <description>X_CP_GESTORE</description>
    <externalDeveloperName>X_CP_GESTORE</externalDeveloperName>
    <label>CP Gestore</label>
    <length>100</length>
    <type>Text</type>
</CustomField>