force-app/main/default/objects/SiebelRdo__x/fields/X_CPR__c.field-meta.xml
<CustomField>
    <fullName>X_CPR__c</fullName>
    <description>X_CPR</description>
    <externalDeveloperName>X_CPR</externalDeveloperName>
    <label>CPR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>