force-app/main/default/objects/SiebelRdo__x/fields/X_DA_ESEGUIRE_NON_PRIMA_DEL__c.field-meta.xml
<CustomField>
    <fullName>X_DA_ESEGUIRE_NON_PRIMA_DEL__c</fullName>
    <description>X_DA_ESEGUIRE_NON_PRIMA_DEL</description>
    <externalDeveloperName>X_DA_ESEGUIRE_NON_PRIMA_DEL</externalDeveloperName>
    <label>Da Eseguire Non Prima Del</label>
    <type>DateTime</type>
</CustomField>