force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_CHIUSURA_RDO__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_CHIUSURA_RDO__c</fullName>
    <description>X_DATA_CHIUSURA_RDO</description>
    <externalDeveloperName>X_DATA_CHIUSURA_RDO</externalDeveloperName>
    <label>Data Chiusura RDO</label>
    <type>DateTime</type>
</CustomField>