force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_FINE_ACCERTAMENTO_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_FINE_ACCERTAMENTO_TARI__c</fullName>
    <description>X_DATA_FINE_ACCERTAMENTO_TARI</description>
    <externalDeveloperName>X_DATA_FINE_ACCERTAMENTO_TARI</externalDeveloperName>
    <label>Data Fine Accertamento TARI</label>
    <type>DateTime</type>
</CustomField>