force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_INIZIO_VALIDITA__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_INIZIO_VALIDITA__c</fullName>
    <description>X_DATA_INIZIO_VALIDITA</description>
    <externalDeveloperName>X_DATA_INIZIO_VALIDITA</externalDeveloperName>
    <label>TARI Data Inizio Validita</label>
    <type>DateTime</type>
</CustomField>