force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_INVIO_DISTR__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_INVIO_DISTR__c</fullName>
    <description>X_DATA_INVIO_DISTR</description>
    <externalDeveloperName>X_DATA_INVIO_DISTR</externalDeveloperName>
    <label>Data Invio Distributore</label>
    <type>DateTime</type>
</CustomField>