force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_INVIO_PREV__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_INVIO_PREV__c</fullName>
    <description>X_DATA_INVIO_PREV</description>
    <externalDeveloperName>X_DATA_INVIO_PREV</externalDeveloperName>
    <label>Data Invio Preventivo</label>
    <type>DateTime</type>
</CustomField>