force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_LETT_1__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_LETT_1__c</fullName>
    <description>X_DATA_LETT_1</description>
    <externalDeveloperName>X_DATA_LETT_1</externalDeveloperName>
    <label>Data lettura 1</label>
    <type>DateTime</type>
</CustomField>