force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_LETT_2__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_LETT_2__c</fullName>
    <description>X_DATA_LETT_2</description>
    <externalDeveloperName>X_DATA_LETT_2</externalDeveloperName>
    <label>Data lettura 2</label>
    <type>DateTime</type>
</CustomField>