force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_MAX_CONF__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_MAX_CONF__c</fullName>
    <description>X_DATA_MAX_CONF</description>
    <externalDeveloperName>X_DATA_MAX_CONF</externalDeveloperName>
    <label>Data Max Conferma</label>
    <type>DateTime</type>
</CustomField>