force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_MIS_ATTIVA__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_MIS_ATTIVA__c</fullName>
    <description>X_DATA_MIS_ATTIVA</description>
    <externalDeveloperName>X_DATA_MIS_ATTIVA</externalDeveloperName>
    <label>Data Mis Attiva</label>
    <type>DateTime</type>
</CustomField>