force-app/main/default/objects/SiebelRdo__x/fields/X_DATA_RIT_SALV__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_RIT_SALV__c</fullName>
    <description>X_DATA_RIT_SALV</description>
    <externalDeveloperName>X_DATA_RIT_SALV</externalDeveloperName>
    <label>Data Ritorno Salv</label>
    <type>DateTime</type>
</CustomField>